--- a/src/main/resources/templates/link/list.html
+++ b/src/main/resources/templates/link/list.html
@@ -19,7 +19,7 @@
                     <a class="title " th:href="@{'/link/' + ${link.id}}" th:text="${link.title}">
                         Title Goes Here
                     </a>
-                    <span class="domain">(<a th:href="${link.url}" th:text="${link.getDomainName()}">therealdanvega.com</a>)</span>
+                    <span class="domain">(<a th:href="${link.url}" th:text="${link.getDomainName()}" target="_blank">therealdanvega.com</a>)</span>
                 </p>
                 <p class="tagline ">submitted
                     <!--<time title="Sat Mar 10 06:26:36 2018 UTC" datetime="2018-03-10T06:26:36+00:00" class="live-timestamp">2 hours ago</time> by-->
