--- a/src/main/resources/templates/link/view.html
+++ b/src/main/resources/templates/link/view.html
@@ -8,6 +8,9 @@
 <div th:replace="~{layouts/main_layout :: jumbotron}"></div>
 
 <div class="container">
+    <div class="alert alert-success" role="alert" th:if="${success}">
+        Your new link was created!
+    </div>
 
     <!-- link -->
     <div class="row link">
