--- a/src/main/resources/templates/link/view.html
+++ b/src/main/resources/templates/link/view.html
@@ -22,11 +22,11 @@
         <div class="col-11">
             <p class="title">
                 <a class="title " th:href="${link.url}" th:text="${link.title}">What's new in Spring Boot 2?</a>
-                <span class="domain">(<a th:href="${link.getDomainName()}">therealdanvega.com</a>)</span>
+                <span class="domain">(<a th:href="${link.getDomainName()}" th:text="${link.getDomainName()}">therealdanvega.com</a>)</span>
             </p>
             <p class="tagline ">submitted
-                <time th:title="${link.getCreationDate()}" th:datetime="${link.getCreationDate()}" class="live-timestamp" th:text="${link.getPrettyTime()}">2 hours ago</time> by
-                <a href="https://www.reddit.com/user/therealdanvega" class="author">therealdanvega</a>
+                <time th:title="${link.getCreationDate()}" th:datetime="${link.getCreationDate()}" class="live-timestamp" th:text="${link.getPrettyTime()}">1 hour(s)</time> by
+                <a href="/" class="author" th:text="${link.createdBy}">therealdanvega</a>
                 <span class="userattrs"></span>
             </p>
             <p><a th:href="${link.url}" th:text="${link.url}" target="_blank"></a></p>
