--- a/src/main/resources/templates/link/view.html
+++ b/src/main/resources/templates/link/view.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{layouts/main_layout :: head(title = 'Springit - Spring Boot Reddit Clone')}">
 </head>
 <body>
@@ -45,13 +46,25 @@
                 all 21 comments
             </div>
         </div>
-        <div class="row addcomment">
+        <!--<div class="row addcomment">-->
+            <!--<div class="col-1">&nbsp;</div>-->
+            <!--<div class="col-11">-->
+                <!--<div class="form-group">-->
+                    <!--<textarea class="form-control" id="comment" rows="3"></textarea>-->
+                <!--</div>-->
+                <!--<button type="submit" class="btn btn-primary">Add Comment</button>-->
+            <!--</div>-->
+        <!--</div>-->
+        <div class="row addcomment" sec:authorize="hasRole('ROLE_USER')">
             <div class="col-1">&nbsp;</div>
             <div class="col-11">
-                <div class="form-group">
-                    <textarea class="form-control" id="comment" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Add Comment</button>
+                <form id="frmAddLink" method="POST" th:action="@{/link/comments}" th:object="${comment}">
+                    <input type="hidden" th:field="*{link}"/>
+                    <div class="form-group">
+                        <textarea class="form-control" id="comment" rows="3" th:field="*{body}"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add Comment</button>
+                </form>
             </div>
         </div>
         <!-- single comment -->
