--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -7,6 +7,14 @@
 <div th:replace="~{layouts/main_layout :: jumbotron}"></div>
 
 <!-- User Registration form -->
+<div class="row" th:if="${success}">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 alert alert-success" role="alert" >
+        You have successfully registered with us. Please check your email to activate your account.
+    </div>
+    <div class="col-md-3"></div>
+</div>
+
 <form class="form-horizontal" role="form" method="POST" th:action="@{/register}" th:object="${user}" th:if="!${success}">
     <div class="row">
         <div class="col-md-3"></div>
@@ -15,7 +23,6 @@
             <hr>
         </div>
     </div>
-    <!--
     <div class="row" th:if="${validationErrors}">
         <div class="col-md-3"></div>
         <div class="col-md-6">
@@ -26,7 +33,6 @@
             </span>
         </div>
     </div>
-    -->
     <div class="row">
         <div class="col-md-3 field-label-responsive">
             <label for="first-name">First Name</label>
