--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -143,6 +143,7 @@
                            class="form-control"
                            id="confirmPassword"
                            placeholder="Confirm Password"
+                           th:field="*{confirmPassword}"
                            required>
                 </div>
             </div>
