my implementation of activate user endpoint

--- a/src/main/resources/templates/email/welcome.html
+++ b/src/main/resources/templates/email/welcome.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Springit Welcome</h1>
-    <p th:text="|Dear ${user.getFullName()}|">Dear Username</p>
+    <p th:text="|Dear ${user.getFullName()},|">Dear Username,</p>
     <p>Welcome to your new favorite site.</p>
     </body>
 </html>
