--- a/src/main/resources/templates/auth/activated.html
+++ b/src/main/resources/templates/auth/activated.html
@@ -7,16 +7,12 @@
 <nav th:replace="~{layouts/main_layout :: nav}"></nav>
 <div th:replace="~{layouts/main_layout :: jumbotron}"></div>
 
-<div class="container">
-
-
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <h4>Your account is activated and you can now <a th:href="@{/login}" href="#">login</a>. Welcome to RedditClone!</h4>
-        </div>
-        <div class="col-md-3"></div>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 alert alert-success" role="alert" >
+        <p>Your account is activated and you can now <a th:href="@{/login}" href="#">login</a>. Welcome to RedditClone!</p>
     </div>
+    <div class="col-md-3"></div>
 </div>
 
 </body>
