--- a/src/main/resources/templates/email/activation.html
+++ b/src/main/resources/templates/email/activation.html
@@ -3,12 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Your Message Subject or Title</title>
+    <title th:text="#{redditclone.email.welcome.title}">Your Message Subject or Title</title>
 </head>
 <body>
-    <h1>Springit User Activation</h1>
-    <p th:text="|Dear ${user.getFullName()},|">Dear Username,</p>
-    <p>Thank you for signing up for a free account with us at Springit. Please click on the link below to activate your account.</p>
-    <a th:href="${environment.getProperty('redditclone.base-url')} + '/activate/' + ${user.getEmail()} + '/' + ${user.getActivationCode()}">Activate Account</a>
+    <h1 th:text="#{redditclone.email.activation.title}">Springit User Activation</h1>
+    <p th:text="#{redditclone.email.activation.greeting(${user.getFullName()})}">Dear Username,</p>
+    <p th:text="#{redditclone.email.activation.body}">Thank you for signing up for a free account with us at Springit. Please click on the link below to activate your account.</p>
+    <a th:href="${environment.getProperty('redditclone.base-url')} + '/activate/' + ${user.getEmail()} + '/' + ${user.getActivationCode()}" th:text="#{redditclone.email.activation.linkText}">Activate</a>
 </body>
 </html>
