--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -23,7 +23,7 @@
     <div class="container">
         <a class="navbar-brand" href="/">
             <i class="fa fa-leaf" aria-hidden="true"></i>
-            SPRINGIT
+            <span th:text="#{redditclone.appNavLinkText}">SPRINGIT</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
